# CppGame

./: .gitignore  AI.h  BuildingEnum.h  Ibuilding.h  Iunit.h  game.cpp  game.h  main.cpp  map.cpp  map.h  peasant.cpp  peasant.h  player.h  structure.txt  task.h  techTreeEN.graphml  techTreeUA.graphml  txt.txt  txt2.txt  warior.cpp  warior.h
release/: CMakeLists.txt  txt.txt
release/src/: main.cpp
release/src/AI/: AIController.cpp  AIController.h  AIState.cpp  AIState.h  BuildOrder.cpp  BuildOrder.h
release/src/Audio/: AudioManager.h  Audiomanager.cpp
release/src/Core/: Game.cpp  Game.h  GameState.cpp  GameState.h
release/src/Entities/: Building.cpp  Building.h  Entity.cpp  Entity.h  Fighter.cpp  Fighter.h  Obstacle.cpp  Obstacle.h  Peasant.cpp  Peasant.h  Unit.cpp  Unit.h
release/src/Graphics/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
release/src/Input/: InputHandler.cpp  InputHandler.h
release/src/Map/: FogOfWar.cpp  FogOfWar.h  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  Pathfinding.cpp  Pathfinding.h  Tile.cpp  Tile.h
release/src/Navigation/: NavMesh.cpp  NavMesh.h  SteeringSystem.cpp  SteeringSystem.h
release/src/Serialization/: SaveSystem.cpp  SaveSystem.h
release/src/Systems/: CombatSystem.cpp  CombatSystem.h  CommandSystem.cpp  CommandSystem.h  MovementSystem.cpp  MovementSystem.h  PopulationSystem.cpp  PopulationSystem.h  ResourceManager.cpp  ResourceManager.h  SelectionSystem.cpp  SelectionSystem.h  TechTree.cpp  TechTree.h
release/src/UI/: HUD.cpp  HUD.h  MenuSystem.cpp  MenuSystem.h  SelectionPanel.cpp  SelectionPanel.h
release/src/Utils/: Math.h  Timer.cpp  Timer.h
try/: README.md
try/try_path_find/: CMakeLists.txt  Cell.cpp  Cell.h  LandType.h  Map.cpp  Map.h  Unit.cpp  Unit.h  main.cpp
try/try_player_class/: main.cpp
try/try_show_map/: CMakeLists.txt  main.cpp
try/try_show_map/lib/: CmakeLists.txt
try/try_task_management/: CMakeLists.txt  main.cpp
try/try_tech_tree/: CMakeLists.txt  main.cpp
